tests/snapshots/examples_fixtures/imports__alias_import_script.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/alias_import_script.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Data.MyFile` to import.

  examples/imports/alias_import_script.flx:1:1
  |
1 | import Modules.Data.MyFile as MyAlias
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Data.MyFile.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Data.MyFile` under roots: examples/imports, lib, src (imported from examples/imports/alias_import_script.flx).
== stdout ==
<not executed>
