tests/snapshots/examples_fixtures/imports__alias_invalid_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/alias_invalid_error.flx
== compile ==
failed (module)
== diagnostics ==
error[E026]: Invalid Module Alias

Invalid module alias: `myfile`.

  examples/imports/alias_invalid_error.flx:5:1
  |
5 | import Modules.Data.MyFile as myfile
  | ^

Hint:
  Module aliases must start with an uppercase letter.
== stdout ==
<not executed>
