tests/snapshots/examples_fixtures/imports__test_import_math.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/test_import_math.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Math` to import.

  examples/imports/test_import_math.flx:4:1
  |
4 | import Modules.Math as Math
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Math.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Math` under roots: //?/examples/imports, //?/src (imported from //?/examples/imports/test_import_math.flx).
== stdout ==
<not executed>
